--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com</groupId>
-  <artifactId>mmall</artifactId>
+  <artifactId>mmail</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>mmall Maven Webapp</name>
+  <name>mmail Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -248,7 +248,7 @@
 
 
   <build>
-    <finalName>mmall</finalName>
+    <finalName>mmail</finalName>
     <plugins>
       <plugin>
         <groupId>org.mybatis.generator</groupId>
