--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,5 +1,5 @@
 db.driverLocation=lib/mysql-connector-java-5.1.13-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://127.0.0.1:3306/mmail?characterEncoding=utf-8
+db.url=jdbc:mysql://127.0.0.1:3306/mmall?characterEncoding=utf-8
 db.username=root
 db.password=123456
