--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -3,3 +3,12 @@ db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://127.0.0.1:3306/mmall?characterEncoding=utf-8
 db.username=root
 db.password=123456
+
+
+db.initialSize = 20
+db.maxActive = 50
+db.maxIdle = 20
+db.minIdle = 10
+db.maxWait = 10
+db.defaultAutoCommit = true
+db.minEvictableIdleTimeMillis = 3600000
