--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -7,5 +7,5 @@ ftp.server.http.prefix=http://img.happymmall.com/
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 
-password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+password.salt = sdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
